force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Pay_Code_Multiplier_Override__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Code_Multiplier_Override__c</fullName>
    <description>If &apos;Yes&apos; the Pay Multiplier value will not be inherited from the related Pay Code</description>
    <inlineHelpText>If &apos;Yes&apos; the Pay Multiplier value will not be inherited from the related Pay Code</inlineHelpText>
    <label>Pay Code Multiplier Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>