force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Pay_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Multiplier__c</fullName>
    <description>The inherited Pay Multiplier from the Pay Code.  This field is used in the calculation of Pay Total.</description>
    <inlineHelpText>The inherited Pay Multiplier from the Pay Code.  This field is used in the calculation of Pay Total.</inlineHelpText>
    <label>Pay Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>