force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Rate__c</fullName>
    <description>The initial pay rate of this Pay Transaction.  This field is used in the calculation of Pay Total.</description>
    <inlineHelpText>The initial pay rate of this Pay Transaction.  This field is used in the calculation of Pay Total.</inlineHelpText>
    <label>Pay Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>