force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Pay_Total__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Total__c</fullName>
    <description>The calculated Pay Total (Number) for the Pay Transaction</description>
    <formula>If (ISBLANK (tc9_pr__Pay_Rate__c), 0 ,tc9_pr__Pay_Rate__c) * IF (ISBLANK( tc9_pr__Pay_Multiplier__c ), 1 ,tc9_pr__Pay_Multiplier__c) * If ( ISBLANK(tc9_pr__Quantity__c),  1, tc9_pr__Quantity__c ) * If (OR(ISBLANK(tc9_pr__Leave_Rate_Multiplier__c), tc9_pr__Leave_Rate_Multiplier__c = 0), 1, tc9_pr__Leave_Rate_Multiplier__c )</formula>
    <inlineHelpText>The calculated Pay Total (Number) for the Pay Transaction</inlineHelpText>
    <label>Pay Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>