force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Pay_Transaction__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Transaction</label>
    <referenceTo>tc9_pr__Pay_Transaction__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>