force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Pay_Transaction_Incomplete_Reasons__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Transaction_Incomplete_Reasons__c</fullName>
    <description>Indicates why this pay transaction cannot be included in payrun calculations</description>
    <formula>If(NOT ( CONTAINS ( Upper(RecordType.DeveloperName) , &quot;FEE&quot; )),
If ( AND ( ISBLANK ( tc9_pr__Pay_Code__c ) , NOT ( CONTAINS ( RecordType.DeveloperName , &quot;Withholding&quot; ) ),NOT ( CONTAINS ( RecordType.DeveloperName , &quot;System_Marker&quot; ) ), NOT ( CONTAINS ( RecordType.DeveloperName , &quot;Leave&quot; ) ) ) , &quot;No Pay Code&quot; &amp;BR() , &quot;&quot; ) &amp;
If ( ISBLANK ( tc9_pr__Payee__c ) , &quot;No Payee&quot; &amp;BR() , &quot;&quot; ) &amp;
If ( ISBLANK ( tc9_pr__Employee__c ) , &quot;No Contact&quot; &amp;BR() , &quot;&quot; ) &amp; 
If ( ISBLANK ( tc9_pr__Payment_Entity__c ) , &quot;No Payment Entity&quot; &amp;BR() , &quot;&quot; ) &amp;
If ( ISBLANK ( tc9_pr__Entry_Date__c ) , &quot;No Entry Date&quot; &amp;BR() , &quot;&quot; ) &amp;
If ( ISBLANK ( tc9_pr__Calendar_Period__c ) , &quot;No Calendar Period&quot; , &quot;&quot; )
,&apos;&apos;)</formula>
    <inlineHelpText>Indicates why this pay transaction cannot be included in payrun calculations</inlineHelpText>
    <label>Pay Transaction Incomplete Reasons</label>
    <type>Text</type>
</CustomField>