force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__PAYE__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYE__c</fullName>
    <description>PAYE withheld from the Payee.</description>
    <inlineHelpText>PAYE withheld from the Payee.</inlineHelpText>
    <label>PAYE</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>