force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Payee_Pay_Batch_Reversed_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Pay_Batch_Reversed_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payee Pay Batch record creating the reversal is stored in this field. As it is a lookup, information about the Pay Batch can be retrieved.</description>
    <inlineHelpText>The Payee Pay Batch record creating the reversal is stored in this field. As it is a lookup, information about the Pay Batch can be retrieved.</inlineHelpText>
    <label>Payee Pay Batch Reversed Id</label>
    <referenceTo>tc9_pr__Pay_Batch_Item__c</referenceTo>
    <relationshipLabel>Pay Transactions (Payee Pay Batch Reversed Id)</relationshipLabel>
    <relationshipName>Pay_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>