force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__PAYG_Tax_Payable_for_Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYG_Tax_Payable_for_Payee__c</fullName>
    <description>Identifies if, at the time of Pay Transaction creation, the related Payee has PAYG Withholdings defined</description>
    <inlineHelpText>Identifies if, at the time of Pay Transaction creation, the related Payee has PAYG Withholdings defined</inlineHelpText>
    <label>PAYG Tax Payable for Payee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>