force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related payment entity</description>
    <inlineHelpText>The related payment entity</inlineHelpText>
    <label>Payment Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pay Transactions (Payment Entity)</relationshipLabel>
    <relationshipName>Pay_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>