force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Post_Tax_Superannuation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Post_Tax_Superannuation__c</fullName>
    <description>The value of a Post Tax Superannuation Deduction.</description>
    <inlineHelpText>The value of a Post Tax Superannuation Deduction.</inlineHelpText>
    <label>Post-Tax Superannuation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>