force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Processed_Date__c</fullName>
    <description>The date/time that the Pay Transaction was processed in a Payroll</description>
    <inlineHelpText>The date/time that the Pay Transaction was processed in a Payroll</inlineHelpText>
    <label>Payroll Processed Date</label>
    <type>Date</type>
</CustomField>