force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Project_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Project_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Project Code associated with the Pay Transaction</description>
    <inlineHelpText>The Project Code associated with the Pay Transaction</inlineHelpText>
    <label>Project Code</label>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>