force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Quantity_by_Leave_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Quantity_by_Leave_Multiplier__c</fullName>
    <description>Quantity based on Leave Rate Multiplier</description>
    <formula>tc9_pr__Quantity__c * If(ISBLANK(tc9_pr__Leave_Rate_Multiplier__c),1,tc9_pr__Leave_Rate_Multiplier__c)</formula>
    <inlineHelpText>Quantity based on Leave Rate Multiplier</inlineHelpText>
    <label>Quantity by Leave Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>