force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__ReversalId__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ReversalId__c</fullName>
    <description>The Id of the originating reversal pay transaction.</description>
    <inlineHelpText>The Id of the originating reversal pay transaction.</inlineHelpText>
    <label>Reversed ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>