force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Shortfall_Amount_Will_Rollover__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Shortfall_Amount_Will_Rollover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the shortfall amount will rollover to the payee deduction record amount not withheld</description>
    <inlineHelpText>Indicates that the shortfall amount will rollover to the payee deduction record amount not withheld</inlineHelpText>
    <label>Shortfall Amount Will Rollover?</label>
    <type>Checkbox</type>
</CustomField>