force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>The stage in the payroll process the Pay Transaction , updated by the application automatically.</description>
    <inlineHelpText>The stage in the payroll process the Pay Transaction , updated by the application automatically.</inlineHelpText>
    <label>Payroll Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>