force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__STSL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STSL__c</fullName>
    <description>The calculated value of Study and Training Support Loan repayment</description>
    <inlineHelpText>The calculated value of Study and Training Support Loan repayment</inlineHelpText>
    <label>STSL</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>