force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Superannuable_Gross__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuable_Gross__c</fullName>
    <description>Total ordinary time earnings</description>
    <inlineHelpText>Total ordinary time earnings</inlineHelpText>
    <label>Superannuable Gross</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>