force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Superannuation_Employer_Additional__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Employer_Additional__c</fullName>
    <description>The value of an  additional employer superannuation contribution.</description>
    <inlineHelpText>The value of an  additional employer superannuation contribution.</inlineHelpText>
    <label>Superannuation Employer Additional</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>