force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Superannuation_Fund__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related payee superannuation fund</description>
    <inlineHelpText>The related payee superannuation fund</inlineHelpText>
    <label>Superannuation Fund</label>
    <referenceTo>tc9_pr__Superannuation_Fund__c</referenceTo>
    <relationshipLabel>Pay Transactions (Superannuation Fund)</relationshipLabel>
    <relationshipName>Pay_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>