force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Superannuation_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Guarantee__c</fullName>
    <description>The total amount of employer superannuation</description>
    <inlineHelpText>The total amount of employer superannuation</inlineHelpText>
    <label>Superannuation Guarantee</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>