force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Superannuation_Refund__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Refund__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The value above the Maximum Contribution Base to be returned to the Payee</description>
    <inlineHelpText>The value above the Maximum Contribution Base to be returned to the Payee</inlineHelpText>
    <label>Superannuation Refund</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>