force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__System_Generated__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__System_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this pay transaction was created by 2cloudnine Payroll</description>
    <inlineHelpText>Indicates that this pay transaction was created by 2cloudnine Payroll</inlineHelpText>
    <label>2cloudnine Payroll Generated</label>
    <type>Checkbox</type>
</CustomField>