force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__System_Generated_Reversed__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__System_Generated_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines if a System Generated has been reversed due to Calculation_Version__c being greater than 1.</description>
    <inlineHelpText>This field determines if a System Generated has been reversed due to Calculation_Version__c being greater than 1.</inlineHelpText>
    <label>System Generated Reversed</label>
    <type>Checkbox</type>
</CustomField>