force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Total_Tax_AUS__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Tax_AUS__c</fullName>
    <description>The total amount of tax withheld</description>
    <formula>tc9_pr__PAYG__c + tc9_pr__HELP__c + tc9_pr__SFSS__c + tc9_pr__Additional_Tax__c + tc9_pr__STSL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount of tax withheld</inlineHelpText>
    <label>Total Tax AUS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>