force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Transaction_Type__c</fullName>
    <description>A summarised Pay Transaction type.</description>
    <inlineHelpText>A summarised Pay Transaction type.</inlineHelpText>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>