force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__UK_NI_Category__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Category__c</fullName>
    <description>The Payee NI Category from their Payee Withholding record that was selected during the Pay Batch calculation.</description>
    <inlineHelpText>The Payee NI Category from their Payee Withholding record that was selected during the Pay Batch calculation.</inlineHelpText>
    <label>UK NI Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__UK_NI_Category_Picklists</valueSetName>
    </valueSet>
</CustomField>