force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__UK_NI_Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Contribution_Type__c</fullName>
    <description>Indicates whether the NI Pay Transaction is attributed to the employee or the employer.</description>
    <inlineHelpText>Indicates whether the NI Pay Transaction is attributed to the employee or the employer.</inlineHelpText>
    <label>UK NI Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__UK_NI_Contribution_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>