force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__User_Notes__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__User_Notes__c</fullName>
    <description>User-entered notes regarding this Pay Transaction.</description>
    <inlineHelpText>User-entered notes regarding this Pay Transaction.</inlineHelpText>
    <label>User Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>