force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__WorkCover_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__WorkCover_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the Pay Transaction is WorkCover Exempt.</description>
    <inlineHelpText>Defines if the Pay Transaction is WorkCover Exempt.</inlineHelpText>
    <label>WorkCover Exempt</label>
    <type>Checkbox</type>
</CustomField>