force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_util__Above_ATO_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Above_ATO_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Above_ATO_Rate</label>
    <type>Checkbox</type>
</CustomField>