force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_util__Is_Reversed__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Is_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reversed</label>
    <type>Checkbox</type>
</CustomField>