force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_util__OriginalTSEID__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__OriginalTSEID__c</fullName>
    <label>OriginalTSEID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>