force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_util__PO_Notes__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__PO_Notes__c</fullName>
    <label>PO Allocation Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>