force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_util__Process_PO_Allocation__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Process_PO_Allocation__c</fullName>
    <formula>AND(tc9_pr__Assignment__r.tc9_util__Requires_Purchase_Order__c,
tc9_et__Invoice_Rate__c != 0,
isblank(tc9_et__Invoice_Item__c),
isblank(tc9_util__Purchase_Order__c),
 tc9_et__To_Be_Invoiced__c = FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process PO Allocation</label>
    <type>Checkbox</type>
</CustomField>