force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_util__Reversed_From_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Reversed_From_Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reversed From Timesheet</label>
    <referenceTo>tc9_et__Timesheet__c</referenceTo>
    <relationshipLabel>Pay Transactions (Reversed From Timesheet)</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>