force-app/main/default/objects/tc9_pr__Pay_Transaction__c/recordTypes/tc9_et__Client_Paid_Expense.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Client_Paid_Expense</fullName>
    <active>true</active>
    <description>To be used for Pay Transactions relating to Client Paid Expenses</description>
    <label>Client Paid Expense</label>
</RecordType>