force-app/main/default/objects/tc9_pr__Pay_Transaction__c/recordTypes/tc9_et__Payroll_Services_Fee.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Payroll_Services_Fee</fullName>
    <active>true</active>
    <description>To be used for Pay Transactions relating to Payroll Services Fees</description>
    <label>Payroll Services Fee</label>
</RecordType>