force-app/main/default/objects/tc9_pr__Pay_Transaction__c/recordTypes/tc9_et__Retainer_Fee.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Retainer_Fee</fullName>
    <active>true</active>
    <description>To be used for Pay Transactions relating to Retainer Fees</description>
    <label>Retainer Fee</label>
</RecordType>