force-app/main/default/objects/tc9_pr__Pay_Transaction__c/recordTypes/tc9_et__Temp_To_Perm_Fee.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Temp_To_Perm_Fee</fullName>
    <active>true</active>
    <description>To be used for Pay Transactions relating to Temp To Perm Fees</description>
    <label>Temp To Perm Fee</label>
</RecordType>