force-app/main/default/objects/tc9_pr__Pay_Transaction__c/recordTypes/tc9_pr__Allowance.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Allowance</fullName>
    <active>true</active>
    <label>Allowance</label>
</RecordType>