force-app/main/default/objects/tc9_pr__Pay_Transaction__c/recordTypes/tc9_pr__Deduction.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Deduction</fullName>
    <active>true</active>
    <label>Deduction</label>
</RecordType>