force-app/main/default/objects/tc9_pr__Pay_Transaction__c/recordTypes/tc9_pr__FBT.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__FBT</fullName>
    <active>true</active>
    <label>FBT</label>
</RecordType>