force-app/main/default/objects/tc9_pr__Pay_Transaction__c/recordTypes/tc9_pr__FEE.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__FEE</fullName>
    <active>true</active>
    <label>FEE</label>
</RecordType>