force-app/main/default/objects/tc9_pr__Pay_Transaction__c/recordTypes/tc9_pr__Leave_Accrual.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Leave_Accrual</fullName>
    <active>true</active>
    <label>Leave Accrual</label>
</RecordType>